k8s-abstractions/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar
spec:
  selector:
    matchLabels:
      app: calendar
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      # this configuration means update without downtime for the single replica
      # default values is 10% for both fields
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
      - name: calendar
        image: mrshlyakhov/calendar
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        # - name: config
        #   mountPath: /etc/nginx/conf.d
        - name: podinfo
          mountPath: /etc/podinfo

      # Probes
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 10
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: 80
          periodSeconds: 10

      volumes:
      # - name: config
      #   configMap:
      #     name: nginx
      - name: podinfo
        downwardAPI:
          items:
            - path: "labels"
              fieldRef:
                fieldPath: metadata.labels
            - path: "annotations"
              fieldRef:
                fieldPath: metadata.annotations
