k8s-abstractions/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar
spec:
  type: LoadBalancer
  selector:
    app: calendar
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 80
